--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8"/>
-	<title>My App</title>
+	<title>Socket.io basic App</title>
 
 </head>
 <body>
 	<h1>hello socket </h1>
-	 <p> wellcome to my app </p>
+	<p> wellcome to my app </p>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
+<script type="text/javascript">
+	var socket = io(); //defined when we load in socketio libary. goes to io.on(connection ) method in server side.
+
+</script>
 </body>
 </html>
