--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,6 @@
 	<p> wellcome to my app </p>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.3.7.js"></script>
-<script type="text/javascript">
-	var socket = io(); //defined when we load in socketio libary. goes to io.on(connection ) method in server side.
-
-</script>
+<script src="/js/app.js"></script>
 </body>
 </html>
